force-app/main/default/objects/Contact/fields/Patient_Zip__c.field-meta.xml
<CustomField>
    <fullName>Patient_Zip__c</fullName>
    <label>Client Zip</label>
    <length>255</length>
    <type>Text</type>
</CustomField>