force-app/main/default/objects/Contact/fields/PHOTOGRAPHY__c.field-meta.xml
<CustomField>
    <fullName>PHOTOGRAPHY__c</fullName>
    <label>PHOTOGRAPHY</label>
    <type>Date</type>
</CustomField>