force-app/main/default/objects/Contact/fields/Pro_rate__c.field-meta.xml
<CustomField>
    <fullName>Pro_rate__c</fullName>
    <label>Pro-rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>