force-app/main/default/objects/Contact/fields/Provider_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Provider_Full_Name__c</fullName>
    <label>Provider Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>