force-app/main/default/objects/Contact/fields/Responsible_Party_Employer__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Employer__c</fullName>
    <label>Responsible Party Employer</label>
    <length>255</length>
    <type>Text</type>
</CustomField>