force-app/main/default/objects/Contact/fields/Responsible_Party_Home_Phone__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Home_Phone__c</fullName>
    <label>Responsible Party Home Phone</label>
    <type>Phone</type>
</CustomField>