force-app/main/default/objects/Contact/fields/Responsible_Party_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Last_Name__c</fullName>
    <label>Responsible Party Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>