force-app/main/default/objects/Contact/fields/Responsible_Party_Middle_Initial__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Party_Middle_Initial__c</fullName>
    <label>Responsible Party Middle Initial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>