force-app/main/default/objects/Contact/fields/RESTYLANE_INJECTION__c.field-meta.xml
<CustomField>
    <fullName>RESTYLANE_INJECTION__c</fullName>
    <label>RESTYLANE INJECTION</label>
    <type>Date</type>
</CustomField>