force-app/main/default/objects/Contact/fields/Retail_Products__c.field-meta.xml
<CustomField>
    <fullName>Retail_Products__c</fullName>
    <label>Retail Products</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>