force-app/main/default/objects/Contact/fields/SCULPTRA_AESTHETIC__c.field-meta.xml
<CustomField>
    <fullName>SCULPTRA_AESTHETIC__c</fullName>
    <label>SCULPTRA AESTHETIC</label>
    <type>Date</type>
</CustomField>