force-app/main/default/objects/Contact/fields/SKINPEN__c.field-meta.xml
<CustomField>
    <fullName>SKINPEN__c</fullName>
    <label>SKINPEN</label>
    <type>Date</type>
</CustomField>