force-app/main/default/objects/Contact/fields/TATTOO_LASER_TREATMENT__c.field-meta.xml
<CustomField>
    <fullName>TATTOO_LASER_TREATMENT__c</fullName>
    <label>TATTOO LASER TREATMENT</label>
    <type>Date</type>
</CustomField>