force-app/main/default/objects/Contact/fields/TRUSCULPT__c.field-meta.xml
<CustomField>
    <fullName>TRUSCULPT__c</fullName>
    <label>TRUSCULPT</label>
    <type>Date</type>
</CustomField>