force-app/main/default/objects/Contact/fields/X2021_CANCELLATION_POLICY_ADDENDUM__c.field-meta.xml
<CustomField>
    <fullName>X2021_CANCELLATION_POLICY_ADDENDUM__c</fullName>
    <label>2021 CANCELLATION POLICY / ADDENDUM</label>
    <type>Date</type>
</CustomField>