force-app/main/default/objects/Contact/validationRules/First_Name_mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>First_Name_mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK( FirstName)</errorConditionFormula>
    <errorDisplayField>FirstName</errorDisplayField>
    <errorMessage>You must enter the Client&apos;s first name</errorMessage>
</ValidationRule>