force-app/main/default/objects/Contact/validationRules/Mailing_address_must_be_populated.validationRule-meta.xml
<ValidationRule>
    <fullName>Mailing_address_must_be_populated</fullName>
    <active>false</active>
    <errorConditionFormula>OR(
   ISBLANK( MailingCity ),
   ISBLANK( MailingState ),
   ISBLANK( MailingStreet ),
   ISBLANK( MailingPostalCode )
)</errorConditionFormula>
    <errorDisplayField>MailingStreet</errorDisplayField>
    <errorMessage>The full mailing address must be filled in.</errorMessage>
</ValidationRule>